--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>researchershub05"gmail.com</p>
+                <p>researchershub05@gmail.com</p>
               </div>
 
               <div class="phone">
