--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Arsha - v4.3.0
-  * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -154,9 +148,7 @@
         <div class="section-title">
           <h2>Our Services</h2>
           <p>
-            We are your ultimate destination for comprehensive research solutions, specializing in services for Arduino, Raspberry Pi, ESP32, ESP8266, Mechatronics, IoT, and Embedded Systems. From groundbreaking innovation to strategic insights and problem-solving, our dedicated approach ensures excellence in meeting all your research needs.
-          </p>
-        </div>
+            Researchers HUB empowers researchers, students, and businesses to navigate the ever-evolving landscape of technology and engineering. We function as your one-stop shop, offering comprehensive research and development solutions (including specialties in AI, IoT, and embedded systems) to bring your research ideas to fruition. Additionally, we bridge the skill gap through intensive workshops and internship programs focused on in-demand fields like programming languages (C, C++, Java, Python) and cutting-edge tech (AI, Machine Learning).  Furthermore, Researchers HUB equips educational institutions with top-notch training kits and curriculum materials, ensuring a well-rounded learning experience. Partner with us to unlock your full potential and transform your vision into reality.        </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
