--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
         <div class="section-title">
           <h2>About Us</h2>
-          <p>Our organization excels in providing cutting-edge solutions within a world-class environment. Leveraging innovation, you consistently push the boundaries of technology and contribute to advancements in your industry. By fostering a collaborative and forward-thinking atmosphere, you create a space where creativity thrives. Your commitment to excellence positions your company as a leader in developing pioneering solutions that address complex challenges. This dedication to innovation ensures that you remain at the forefront of your field, driving progress and shaping the future
+          <p>
+            Researchers HUB is your trusted partner for navigating the complexities of technology and engineering. Whether you're a researcher, student, or business, our comprehensive services are tailored to meet your specific needs. Specializing in cutting-edge areas such as artificial intelligence (AI), Internet of Things (IoT), and embedded systems, we provide expert guidance to bring your innovative ideas to life. Our team of seasoned professionals collaborates closely with clients, offering strategic support and practical solutions every step of the way. Additionally, we understand the importance of staying ahead in today's competitive landscape. That's why we offer workshops and internship programs focused on programming languages (C, C++, Java, Python) and emerging technologies like AI and machine learning. These hands-on opportunities equip participants with the skills and knowledge needed to succeed in rapidly evolving industries. Moreover, Researchers HUB is committed to supporting educational institutions by providing top-notch training materials and resources. Whether you're looking to enhance your research capabilities, upgrade your skills, or enrich your educational programs, we have the expertise and resources to help you achieve your goals. Partner with Researchers HUB to unlock your full potential and shape a brighter future through technology. With us by your side, you can confidently navigate the ever-changing landscape of technology and engineering, driving innovation and success.
           </p>
         </div>
       </div>
@@ -97,7 +98,7 @@
             <div class="content">
               <h3>What we Do?</h3>
               <p>
-                We serve as the ultimate destination for all your research needs, providing comprehensive one-stop solutions. Whether it's groundbreaking innovation, strategic insights, or problem-solving, our dedicated approach ensures that every aspect of your research requirements is met with efficiency and excellence. 
+                At our core, we serve as the ultimate destination for all your research needs, providing comprehensive one-stop solutions. Whether you're aiming for groundbreaking innovation, seeking strategic insights, or looking for effective problem-solving, our dedicated approach ensures that every aspect of your research requirements is met with efficiency and excellence. Partner with us to unlock the full potential of your research endeavors.
               </p>
             </div>
 
@@ -107,7 +108,7 @@
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Embedded Systems <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Embedded systems: Compact, specialized computers integrated into devices for specific functions, powering everyday technology from smart appliances to industrial machinery.
+                      Discover the power of embedded systems with us. Our expert team specializes in designing and developing custom solutions tailored to your needs. From microcontroller programming to hardware design, we deliver high-performance solutions for IoT, automotive, and industrial applications. Partner with us for innovative embedded solutions that drive success.
                     </p>
                   </div>
                 </li>
@@ -116,28 +117,42 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Mechanical Engineering solutions <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Mechanical engineering solutions empowered by AI optimize design, manufacturing, and maintenance processes, enhancing efficiency and innovation in industrial applications.
+                      Unlock efficiency and innovation in industrial applications with our AI-powered mechanical engineering solutions. From design to manufacturing and maintenance, our technology optimizes processes, enhancing performance and productivity.
                     </p>
                   </div>
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> IoT and AI Integrations <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> IoT, AI and ML Integrations <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      IoT integration revolutionizes connectivity by seamlessly linking devices, enabling data exchange, automation, and remote monitoring. This interconnected network enhances efficiency, decision-making, and innovation across various industries.
+                      Unlock transformative connectivity with IoT integration empowered by AI and ML. Seamlessly linking devices for data exchange, automation, and remote monitoring, our solution drives efficiency, informed decision-making, and innovation across industries.
                     </p>
                   </div>
                 </li>
-
+                
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"><span>04</span> Technical Internship & Industrial Training <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      Elevate your workforce's capabilities with our Technical and Industrial Training programs. Designed to empower professionals for success, our hands-on courses cover essential skills crucial for various industrial sectors. From machinery operation to advanced technology applications, participants gain practical knowledge to excel in their careers. Partner with us to drive innovation and success in your industry.
+                    </p>
+                  </div>
+                </li>
+             
+                <li>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-5" class="collapsed"><span>05</span> Programming Languages Internship <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <div id="accordion-list-5" class="collapse" data-bs-parent=".accordion-list">
+                    <p>
+                      Embark on a transformative journey with our Programming Languages Internship, led by seasoned Industrial Trainers. Dive into immersive hands-on experiences tailored to sharpen your coding skills in languages such as C, C++, Java, Python, SQL, and web technologies. Our expert instructors provide real-world insights and guidance, preparing you to tackle industry challenges with confidence. Gain practical experience and valuable mentorship to excel in the competitive tech landscape. Join us and unlock your potential to thrive in the world of programming.
+                    </p>
+                  </div>
+                </li>
               </ul>
             </div>
-
           </div>
-
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/why-us.png");' data-aos="zoom-in" data-aos-delay="150">&nbsp;</div>
         </div>
-
       </div>
     </section><!-- End Why Us Section -->
 
@@ -148,8 +163,10 @@
         <div class="section-title">
           <h2>Our Services</h2>
           <p>
-            Researchers HUB empowers researchers, students, and businesses to navigate the ever-evolving landscape of technology and engineering. We function as your one-stop shop, offering comprehensive research and development solutions (including specialties in AI, IoT, and embedded systems) to bring your research ideas to fruition. Additionally, we bridge the skill gap through intensive workshops and internship programs focused on in-demand fields like programming languages (C, C++, Java, Python) and cutting-edge tech (AI, Machine Learning).  Furthermore, Researchers HUB equips educational institutions with top-notch training kits and curriculum materials, ensuring a well-rounded learning experience. Partner with us to unlock your full potential and transform your vision into reality.</p></div>
-        <div class="row">
+            Our services encompass comprehensive research and development solutions focusing on AI, IoT, and embedded systems, aiming to bring your innovative ideas to fruition. Additionally, we offer skill development programs through intensive workshops and internships in programming languages like C, C++, Java, Python, and emerging technologies such as AI and Machine Learning. We also extend support to educational institutions by providing top-notch training kits and curriculum materials. Partner with us to unlock your full potential in technology and engineering.
+          </p>
+      </div>
+     <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <h4><a href="">Innovative solutions</a></h4>
@@ -180,11 +197,48 @@
               </p>
             </div>
           </div>
-
+  
         </div>
+        <div class="row">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box">
+              <h4><a href="">Colloborative Research</a></h4>
+              <p>
+                We provide comprehensive support for thesis writing, journal publishing, and research and development (R&D), including proof of concept services to validate innovative ideas.
+              </p>
+            </div>
+          </div>
 
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            <div class="icon-box">
+              <h4><a href="">Business Consultation and Designing</a></h4>
+              <p>
+                Access expert business consulting and tailored solutions to drive growth and success in your endeavors.  
+              </p>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
+            <div class="icon-box">
+              <h4><a href="">Student Internships & Project</a></h4>
+              <p>
+                Explore student internship opportunities and project-making services for hands-on experience and skill development, empowering growth in various fields.
+              </p >
+              </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <h4><a href="">Programing Languages</a></h4>
+              <p>
+                C, C++, Java, Python,SQL, HTML, CSS, JavaScript, Webdevelopment, FullStack Software Development Training
+              </p>
+            </div>
+          </div>
       </div>
     </section><!-- End Services Section -->
+
+
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
@@ -304,7 +358,8 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>researchershub05@gmail.com</p>
+                <p><a href="mailto:?to=&subject=Enquiry%20of%20Service&body=Body%20Here">Compose Email</a>
+                </p>
               </div>
 
               <div class="phone">
