--- a/index.html
+++ b/index.html
@@ -358,7 +358,8 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:?to=&subject=Enquiry%20of%20Service&body=Body%20Here">Compose Email</a>
+                <p><a href="mailto:researchershub05@gmail.com?subject=Enquiry%20of%20Service">write us mail at researchershub05@gmail.com</a>
+                </a>
                 </p>
               </div>
 
