--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 9483936753</p>
+                <p><a href="tel:+919483936753">+91 9483936753</a></p>
               </div>
             </div>
           </div>
