--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p><a href="https://www.google.com/maps/place/13%C2%B003'53.6%22N+77%C2%B043'02.4%22E/@13.0648975,77.715106,17z/data=!3m1!4b1!4m13!1m8!3m7!1s0x3bae1071388a420b:0x65e2686c50dfe5f4!2sBidarahalli+Main+Rd,+Cheemasandra,+Bengaluru,+Karnataka+560049!3b1!8m2!3d13.06142!4d77.7163067!16s%2Fg%2F11c1qwxk7y!3m3!8m2!3d13.064893!4d77.717324?entry=ttu" target="_blank">View Location</a>
+                <p><a href="https://www.google.com/maps/place/13%C2%B003'53.6%22N+77%C2%B043'02.4%22E/@13.0648975,77.715106,17z/data=!3m1!4b1!4m13!1m8!3m7!1s0x3bae1071388a420b:0x65e2686c50dfe5f4!2sBidarahalli+Main+Rd,+Cheemasandra,+Bengaluru,+Karnataka+560049!3b1!8m2!3d13.06142!4d77.7163067!16s%2Fg%2F11c1qwxk7y!3m3!8m2!3d13.064893!4d77.717324?entry=ttu" target="_blank">Bidhrahalli, Bangalore-560049</a>
                 </p>
               </div>
 
