--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:researchershub05@gmail.com?subject=Enquiry%20of%20Service">write us mail at researchershub05@gmail.com</a>
+                <p><a href="mailto:researchershub05@gmail.com?subject=Enquiry%20of%20Service">researchershub05@gmail.com</a>
                 </a>
                 </p>
               </div>
