--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS link -->
+  </head>
+  <body>
+  
+  <!-- Your HTML content -->
+  
+  <!-- WhatsApp icon -->
+  <a href="https://wa.me/919483936753" class="whatsapp-icon" style="position: fixed; bottom: 20px; right: 20px; font-size: 80px; z-index: 999;"><i class="fab fa-whatsapp"></i></a>
+  
+  <!-- Your HTML content -->
+  
+  
 
 <head>
   <meta charset="utf-8">
