--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Amith Kumar</h4>
-                <span>Managing Director</span>
+                <h4>Amithkumar Gajakosh</h4>
+                <span>Co-Founder & MD</span>
                 <p>Expertise business consultant, Product Designer, 3d-Designer
                 </p>
                 <div class="social">
@@ -412,10 +412,7 @@
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
         Designed by <a href="https://www.linkedin.com/in/manikantan-r-632391257/">Researcher's HUB</a>
-      </div>
-
-    
-    
+      </div>    
     </div>
   </footer><!-- End Footer -->
 
@@ -433,6 +430,5 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
 </html>
