--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+            <div class="portfolio-img">    <img src="assets/img/portfolio/portfolio-9.gif" class="img-fluid" alt="GIF Image"></div>
             </div>
           </div>
         </div>
