--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Amithkumar Gajakosh</h4>
+                <h4>Dr. Amithkumar Gajakosh</h4>
                 <span>Co-Founder & MD</span>
                 <p>Expertise business consultant, Product Designer, 3d-Designer
                 </p>
