--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               <div class="member-info">
                 <h4>Manikantan R</h4>
                 <span>Founder & CEO</span>
-                <p>Expertise in Prototyping and Execution Director</p>
+                <p>Expertise in Embedded Designing, Prototyping and Manufacturing Solutions</p>
                 <div class="social">
 
                   <a href="https://www.facebook.com/mani.kantan.5439?mibextid=vk8aRt"><i class="ri-facebook-fill"></i></a>
@@ -349,9 +349,8 @@
               </div>
             </div>
           </div>
-        </div>
 
-      </div>
+        </div>
     </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
