--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-4" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
-              <h4><a href="">Programing Languages</a></h4>
+              <h4><a href="">Grant Based Project Mentoring</a></h4>
               <p>
-                C, C++, Java, Python,SQL, HTML, CSS, JavaScript, Webdevelopment, FullStack Software Development Training
-              </p>
+                We Mentor Granted Innovation Projects Like MSME, VGST, KSCST, etc. with Right Solution and Assessments 
+              </p >
             </div>
           </div>
       </div>
