--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Researcher's HUB</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS link -->
+    <title>About Us</title>
+    <style>
+      .section-title p {
+        text-align: justify;
+      }
+    </style>
   </head>
   <body>
   
@@ -91,14 +97,16 @@
   <main id="main">
 
     <!-- ======= About Us Section ======= -->
+    
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
-          <h2>About Us</h2>
+        <div class="section-title">
+          <h2>About Us</h2>    
           <p>
             Researchers HUB is your trusted partner for navigating the complexities of technology and engineering. Whether you're a researcher, student, or business, our comprehensive services are tailored to meet your specific needs. Specializing in cutting-edge areas such as artificial intelligence (AI), Internet of Things (IoT), and embedded systems, we provide expert guidance to bring your innovative ideas to life. Our team of seasoned professionals collaborates closely with clients, offering strategic support and practical solutions every step of the way. Additionally, we understand the importance of staying ahead in today's competitive landscape. That's why we offer workshops and internship programs focused on programming languages (C, C++, Java, Python) and emerging technologies like AI and machine learning. These hands-on opportunities equip participants with the skills and knowledge needed to succeed in rapidly evolving industries. Moreover, Researchers HUB is committed to supporting educational institutions by providing top-notch training materials and resources. Whether you're looking to enhance your research capabilities, upgrade your skills, or enrich your educational programs, we have the expertise and resources to help you achieve your goals. Partner with Researchers HUB to unlock your full potential and shape a brighter future through technology. With us by your side, you can confidently navigate the ever-changing landscape of technology and engineering, driving innovation and success.
           </p>
+        </div>
         </div>
       </div>
     </section><!-- End About Us Section -->
