--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/team-5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Dr. Krishha Kumar M</h4>
+                <h4>Dr. Krishna Kumar M</h4>
                 <span>Mentor</span>
                 <p>Expertise in Device Evaluation From KSCST(IISc)</p>
                 <div class="social">
