--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Manikantan R</h4>
+                <h4>Manikantan R IISc Bangalore</h4>
                 <span>Founder</span>
-                <p>Expertise in Embedded Designing, Prototyping and Manufacturing Solutions</p>
+                <p>Ex- IISc Project Asst/ Expertise in Embedded Designing, Prototyping and Manufacturing Solutions</p>
                 <div class="social">
                   <a href="https://www.facebook.com/mani.kantan.5439?mibextid=vk8aRt"><i class="ri-facebook-fill"></i></a>
                   <a href="https://www.instagram.com/manikantan_07?igsh=MTVuemJ3ZXg0aW55Zw=="><i class="ri-instagram-fill"></i></a>
